...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="vertical"
                        android:layout_marginTop="20dp" />

                       <Button
                           android:id="@+id/userProfileAddShop"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="10dp"
                           android:text="Add Shop">
                       </Button>

                    <view
                        android:id="@+id/userProfileUserOrders"
                        class="androidx.recyclerview.widget.RecyclerView"
                        android:layout_width="match_parent"
...
