...

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/cafeRowButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
...
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/cellShopName"
                    android:layout_marginTop="3dp"
                    android:text="Dong Cha"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

...
