...
                            android:padding="12dp"
                            android:text="Cafe Name"
                            android:textColor="@color/colorPrimary"
                            android:textSize="28sp" />

                        <TextView
                            android:id="@+id/viewMerchantCafeCafeAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="935 W 30th Street"
                            android:layout_marginStart="14dp">
                        </TextView>

                        <TextView
                            android:id="@+id/viewMerchantCafeCafeHours"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="M-S 11:00 am - 12:00 am"
                            android:layout_marginStart="14dp">
                        </TextView>

...
